--- a/donate/sber.html
+++ b/donate/sber.html
@@ -7,20 +7,20 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.355d6186.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.4e4be5c0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.65e05767.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.a38e23c5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.00a5b1a9.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.5f8082b2.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.3db628e5.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.0928f714.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.79089877.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.54f8f6c9.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.d3a54bbc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.5d90bffd.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.e2f1faba.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.1d6e596f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.d7179482.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.c90cf18c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.d402e4ee.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.7cda3d01.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.654ba5b5.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/_page.1181654b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="/donate/sber"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:secure_url" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="/donate/sber"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="/_app/immutable/assets/donate-preview-link.16ed1c37.png"><!-- HEAD_svelte-rjtykx_END -->
+		<link rel="modulepreload" href="../_app/immutable/chunks/_page.1181654b.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate/sber"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="donate-preview-link.png"><meta property="og:image:secure_url" content="donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate/sber"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
 	</head>
 	<body>
 		<div>
@@ -54,7 +54,7 @@
 			
 			<script>
 				{
-					__sveltekit_x5ioxc = {
+					__sveltekit_1mpni4a = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -63,10 +63,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.4e4be5c0.js"),
-						import("../_app/immutable/entry/app.0928f714.js")
+						import("../_app/immutable/entry/start.00a5b1a9.js"),
+						import("../_app/immutable/entry/app.54f8f6c9.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_x5ioxc.element, {
+						kit.start(app, __sveltekit_1mpni4a.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
