--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.941b8b71.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.2c049886.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.95d08d91.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.104c3ffb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.b2731ea2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.b7142a79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.db46073a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.8644fafa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.718288dc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.c32809c2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.58d1d6fc.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9cdb11cb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.18e24e9b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/link.225ee90c.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1iagrm3_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><link rel="preconnect" href="https://lp-russia.org/join"><!-- HEAD_svelte-1iagrm3_END -->
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.7aac5558.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/link.3267776e.js"><title>ЛПР Петербург</title><!-- HEAD_svelte-1iagrm3_START --><meta name="title" content="ЛПР Петербург"><meta name="description" content="Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!"><link rel="preconnect" href="https://lp-russia.org/join"><!-- HEAD_svelte-1iagrm3_END -->
 	</head>
 	<body>
 		<div>
@@ -68,7 +68,7 @@
 			
 			<script>
 				{
-					__sveltekit_hvtwnx = {
+					__sveltekit_4nrtir = {
 						env: {},
 						base: new URL(".", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -77,10 +77,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.941b8b71.js"),
-						import("./_app/immutable/entry/app.db46073a.js")
+						import("./_app/immutable/entry/start.104c3ffb.js"),
+						import("./_app/immutable/entry/app.718288dc.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_hvtwnx.element, {
+						kit.start(app, __sveltekit_4nrtir.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
