--- a/donate/btc.html
+++ b/donate/btc.html
@@ -7,17 +7,17 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.74fa6573.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.104c3ffb.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.a93a144d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.b2731ea2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.b7142a79.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9886bd70.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.718288dc.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.c32809c2.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.cfd2779c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.3d789238.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9cdb11cb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.0442dc9f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.d8be0a07.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.9528ce8c.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.d3cba43f.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.ee39a623.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.6d7ba070.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-rjtykx_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="http://sveltekit-prerender/donate/btc"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:secure_url" content="https://spblpr.org/donate-preview-link.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="spblpr.org"><meta property="twitter:url" content="http://sveltekit-prerender/donate/btc"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://spblpr.org/donate-preview-link.png"><!-- HEAD_svelte-rjtykx_END -->
@@ -75,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_4nrtir = {
+					__sveltekit_pgjywl = {
 						env: {},
 						base: new URL("..", location).pathname.slice(0, -1),
 						element: document.currentScript.parentElement
@@ -84,10 +84,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.104c3ffb.js"),
-						import("../_app/immutable/entry/app.718288dc.js")
+						import("../_app/immutable/entry/start.a93a144d.js"),
+						import("../_app/immutable/entry/app.cfd2779c.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_4nrtir.element, {
+						kit.start(app, __sveltekit_pgjywl.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
