--- a/donate/tinkoff.html
+++ b/donate/tinkoff.html
@@ -7,17 +7,18 @@
 		<meta http-equiv="content-security-policy" content="">
 		<link href="../_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page.a9981ce8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.11f965a7.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.916f60bd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.36e8bd00.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.08e48841.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.84d57ad2.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.7951b93c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.fc9f9b29.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/_layout.svelte.3ed8b925.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3b6a019d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9f7ba085.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.459dc1d7.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/donate-layout.svelte.e5e56c83.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/headDonatePage.78d8adc3.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.svelte.160a5020.js">
 		<link rel="modulepreload" href="../_app/immutable/entry/donate-_slug_-page.ts.32e3d1b0.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_page.0aade1e3.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/donate/tinkoff"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/donate/tinkoff"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
@@ -72,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_whj2rg = {
+					__sveltekit_1kz5w8j = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL("..", location).pathname.slice(0, -1),
@@ -82,10 +83,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.11f965a7.js"),
-						import("../_app/immutable/entry/app.84d57ad2.js")
+						import("../_app/immutable/entry/start.916f60bd.js"),
+						import("../_app/immutable/entry/app.fc9f9b29.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_whj2rg.element, {
+						kit.start(app, __sveltekit_1kz5w8j.element, {
 							node_ids: [0, 2, 5],
 							data,
 							form: null,
