--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
 		<link href="./_app/immutable/assets/_layout.1f819e44.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.f12cfe56.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/link.f74f4839.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.11f965a7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.916f60bd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.bd35ee46.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.36e8bd00.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.08e48841.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.84d57ad2.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.7951b93c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.fc9f9b29.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.3ed8b925.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/text.af933e8c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3b6a019d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9f7ba085.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/constants.62cfb40b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/main.c2ecaf00.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.075d015c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.942a1830.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/link.71c51e0b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/headDonatePage.78d8adc3.js"><title>Поддержите свободу в Санкт-Петербурге!</title><!-- HEAD_svelte-wfoygi_START --><meta name="title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:url" content="https://yslpn.github.io/spblpr/"><meta property="og:type" content="website"><meta property="og:title" content="Поддержите свободу в Санкт-Петербурге!"><meta property="og:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta property="og:image" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:secure_url" content="https://yslpn.github.io/spblpr/og-donate.png"><meta property="og:image:type" content="image/png"><meta property="og:image:width" content="1200"><meta property="og:image:height" content="630"><meta property="fb:app_id" content="499873967679919"><meta name="twitter:card" content="summary_large_image"><meta property="twitter:domain" content="yslpn.github.io"><meta property="twitter:url" content="https://yslpn.github.io/spblpr/"><meta name="twitter:title" content="Поддержите свободу в Санкт-Петербурге!"><meta name="twitter:description" content="Пополните казну регионального отделения Либертарианской партии России."><meta name="twitter:image" content="https://yslpn.github.io/spblpr/og-donate.png"><!-- HEAD_svelte-wfoygi_END -->
 	</head>
 	<body>
 		<div>
 
 
-<div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by"><h1 class="svelte-gy8nzu">ЛПР Петербург</h1>
+<div class="grid-container svelte-80q6by"><div class="main-content svelte-80q6by">
+
+<h1 class="svelte-gy8nzu">ЛПР Петербург</h1>
 <p class="svelte-gy8nzu"><!-- HTML_TAG_START --><svg xmlns="http://www.w3.org/2000/svg" width="265" height="256" fill="none"><g fill="#C5A664" clip-path="url(#a)"><path d="M52.477 37.608C82.98-6.357 141.855-9.635 175.164 16.68c-1.607-.615-3.214-1.318-4.85-1.874-32.812-10.86-62.556-5.122-89.086 16.978-3.799 3.161-6.896 7.083-10.402 10.625-.497.498-1.344 1.025-1.958.966-3.33-.264-13.148-3.805-16.391-5.767ZM36.612 87.486c2.805 2.956 5.551 6 8.502 8.87 1.14 1.111 2.66 1.931 4.12 2.604 1.256.557 1.578 1.347 1.607 2.606.584 20.109 7.334 37.935 19.78 53.654.322.38.293 1.053.41 1.58-.585-.175-1.286-.175-1.724-.527-15.252-12.528-25.537-28.305-29.978-47.565-1.49-6.499-1.84-13.29-2.688-19.934-.088-.527-.03-1.083-.03-1.288Zm177.237-3.629c3.856-.586 7.831-1.2 12.039-1.874 2.162 10.392 2.366 20.988.496 31.584-3.595 20.402-13.12 37.614-28.633 51.254-30.271 26.637-72.491 27.778-102.294 9.572.175-.527.38-1.112.585-1.698 29.451 8.752 57.033 4.947 81.723-13.494 24.748-18.47 36.084-43.936 36.084-75.344Zm-24.075-57.43c9.233 6.41 16.742 14.138 23.025 23.388-2.105.995-4.062 1.902-5.902 2.78-2.601-4.625-4.939-9.279-7.744-13.582-2.805-4.273-6.106-8.225-9.379-12.586Z"/><path d="M85.434 157.211c-3.974 3.161-8.123 6.117-11.863 9.542-12.593 11.445-22.907 24.822-32.549 38.754-2.25 3.251-4.5 6.499-7.187 9.601.263-.993.292-2.135.789-2.984 4.908-8.109 9.583-16.392 14.872-24.237 9.817-14.519 21.241-27.749 34.01-39.721 7.187-6.733 14.93-12.879 22.293-19.436 2.425-2.166 4.616-4.625 6.574-7.201 2.455-3.249 1.724-6.118-1.782-8.225-3.623-2.137-7.626-3.015-11.717-3.893-13.615-2.986-26.793-7.201-38.1-15.778-1.286-.965-2.425-2.166-3.623-3.249a1.46 1.46 0 0 1 .204-.234c4.208 1.99 8.59 2.693 13.149 1.58.175-.058.38-.087.525-.175.118-.058.176-.146.468-.41-10.694-3.922-21.242-7.874-29.832-16.391 5.873.497 11.366 1.463 17.297-.206-9.875-1.55-18.553-4.946-26.997-9.161-8.24-4.098-17.093-4.596-26.121-3.6-.234.029-.439 0-.701-.176 7.304-5.181 15.398-7.494 24.163-6.645-2.162-2.986-4.383-6.088-6.633-9.191l.497-.498c8.327 5.123 17.005 9.455 26.94 10.83-.702-.321-1.403-.673-2.134-.936-6.837-2.547-13.06-6.147-17.063-12.411-2.075-3.25-3.448-6.967-4.763-10.596-2.6-7.142-4.938-14.372-7.363-21.573-.204-.586-.292-1.2-.438-1.815l.146-.146c3.39 5.034 6.457 10.332 10.256 15.045 7.304 9.074 16.888 15.104 27.67 19.26 10.05 3.894 20.51 5.68 31.263 5.708 1.198 0 2.366-.175 3.564-.263 6.107-.585 11.834.673 17.385 3.161 8.853 3.981 17.414 8.372 24.719 14.9 1.169 1.053 2.337 2.107 3.389 3.278 2.016 2.254 2.104 3.805.234 6.205-4.003 5.181-7.188 10.801-9.058 17.066-.906 3.073-1.431 6.38-1.373 9.571.117 7.699 6.048 11.27 12.447 11.826 7.305.644 14.375-.966 21.3-2.957 6.136-1.756 12.155-3.893 18.145-5.854v-7.669c1.022 1.756 1.752 3.132 2.6 4.391 2.308 3.512 5.931 5.503 9.204 7.932 2.57 1.903 5.084 3.893 7.391 6.089 1.958 1.844 2.688 4.303 2.279 6.966-.263.088-.409.205-.496.176-5.434-2.108-10.898-.527-16.362-.205-11.483.702-21.709 5.825-32.228 9.835-9.846 3.747-19.634 7.698-28.604 13.348-2.893 1.844-5.785 3.834-8.298 6.147-3.828 3.512-5.756 8.02-5.581 13.318.029 1.054 0 2.137 0 3.659-3.009-7.669-1.519-15.045-.614-22.51-.292.088-.496.118-.584.205-7.48 9.748-13.82 20.11-17.122 32.052-5.873 21.193-2.308 41.097 8.941 59.684 3.273 5.416 7.363 10.305 11.074 15.455.263.353.496.732.73 1.085a.789.789 0 0 0-.204.233c-1.724-1.142-3.594-2.079-5.114-3.453-13.528-12.353-21.329-27.692-23.812-45.811-1.666-12.263-.292-24.295 2.483-36.237.059-.293.117-.586.03-.996-12.915 12.938-23.23 27.985-34.507 42.239-.146-.087-.263-.176-.41-.235.38-.906.731-1.815 1.14-2.693 5.464-11.679 12.593-22.304 20.453-32.461 4.529-5.854 9.262-11.592 13.879-17.358.32-.38.555-.82.847-1.229.117-.147.234-.264.321-.41.088-.088.176-.176.234-.264-.146.03-.263.03-.409.059.03.088-.117.176-.263.293Z"/><path d="M239.764 46.741c-6.575 3.044-11.688 8.138-17.414 12.411-3.449 2.576-7.45 3.806-11.512 4.947a8.635 8.635 0 0 0-1.579.585c7.072-.38 14.2 1.171 21.272-.79-10.197 7.435-20.804 13.787-33.717 14.753 1.109 1.434 1.87 1.639 10.488 2.78-9.233 4.625-16.157 12.704-26.033 17.27-1.198-3.892-2.338-7.551-3.477-11.24-.146-.029-.292-.029-.438-.058-.439 4.127-1.023 8.225-1.228 12.382-.087 1.697-.73 2.576-2.045 3.161a77.3 77.3 0 0 1-23.667 6.498c-1.081.117-2.191.205-3.798.351.614-.878.877-1.375 1.256-1.814 4.967-5.855 10.022-11.621 14.902-17.534 5.785-7.025 10.314-14.723 11.775-23.885.292-1.874 1.694-2.078 3.155-2.371 4.003-.79 8.035-1.405 11.951-2.517 17.706-4.918 33.63-13.407 48.209-24.53.789-.585 1.579-1.17 2.514-1.639-1.901 4.83-4.88 8.928-8.357 13.113a456.782 456.782 0 0 0 7.743-1.873ZM.117 10.796c6.545 1.171 12.009 3.952 14.989 10.275 1.11 2.312 2.162 4.683 3.01 7.083 1.548 4.39 3.418 8.606 6.164 12.675-1.052-.41-2.104-.761-3.126-1.2-5.61-2.488-9.73-6.381-11.483-12.411C7.86 20.924 4.704 15.48 0 10.943l.117-.147Z"/><path d="M253.38 53.941c-2.98 2.957-6.574 5.006-10.665 5.503-4.236.498-8.561.117-12.739.117.146-.117.496-.438.907-.702 3.682-2.605 7.305-5.327 11.102-7.757 2.192-1.405 4.588-2.634 7.071-3.366 3.974-1.2 7.333-3.132 10.051-6.293.146-.176.409-.264.614-.381l.087.059c-2.22 5.795-6.165 10.098-11.395 13.61.789-.087 1.607-.116 2.396-.233.848-.147 1.694-.38 2.571-.556Zm11.014-31.172c-2.716 6.293-4.936 13.025-11.482 16.743-2.92 1.668-6.135 2.4-9.759 2.517 3.594-5.65 6.604-11.416 13.149-14.196 2.921-1.26 5.435-3.367 8.092-5.064ZM45.376 84.148c-.701-.292-1.432-.585-2.133-.878-4.09-1.727-8.18-3.512-12.3-5.122-2.63-1.025-4.968-2.4-6.72-4.625-2.309-2.957-5.581-3.864-9.555-4.186 6.662-2.078 12.388-.527 17.443 2.927 4.587 3.132 8.62 7.084 12.885 10.684.263.234.41.586.614.878-.088.118-.146.205-.234.322Zm-4.88 3.338c7.597 2.84 15.222 5.62 21.3 10.801-5.873 1.376-16.216-2.488-21.3-10.8Zm172.534-7.111c2.248-2.4 5.025-3.893 8.15-4.742 3.478-.966 6.983-1.756 10.549-2.517-3.712 2.722-6.867 6.352-12.097 6.44-2.22.029-4.441.497-6.661.79l.059.03Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 0h265v256H0z"/></clipPath></defs></svg><!-- HTML_TAG_END --></p>
 <p class="svelte-gy8nzu">Отделение Либертарианской партии России в северной столице. Вступайте, если разделяете наши ценности!</p>
 
@@ -66,7 +69,7 @@
 			
 			<script>
 				{
-					__sveltekit_whj2rg = {
+					__sveltekit_1kz5w8j = {
 						env: {},
 						assets: "/spblpr",
 						base: new URL(".", location).pathname.slice(0, -1),
@@ -76,10 +79,10 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.11f965a7.js"),
-						import("./_app/immutable/entry/app.84d57ad2.js")
+						import("./_app/immutable/entry/start.916f60bd.js"),
+						import("./_app/immutable/entry/app.fc9f9b29.js")
 					]).then(([kit, app]) => {
-						kit.start(app, __sveltekit_whj2rg.element, {
+						kit.start(app, __sveltekit_1kz5w8j.element, {
 							node_ids: [0, 3],
 							data,
 							form: null,
